--- a/spring_practice/build.gradle
+++ b/spring_practice/build.gradle
@@ -8,6 +8,14 @@ group = 'practice'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+// lombok 설정 추가 시작
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+// lombok 설정 추가 끝
+
 repositories {
     mavenCentral()
 }
@@ -15,6 +23,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.named('test') {
