[Chore] add springboot-starter-web

--- a/spring_practice/build.gradle
+++ b/spring_practice/build.gradle
@@ -23,6 +23,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
+
+    // Provider
     implementation 'javax.inject:javax.inject:1'
 
     // lombok
